fixing scroll bars of body(overflow:hidden)

--- a/styles/style.css
+++ b/styles/style.css
@@ -10,6 +10,7 @@ body {
     background-attachment: fixed;
     background-repeat: no-repeat;
     scroll-behavior: smooth;
+    overflow: hidden;
     /* width: 100vw; */
 
 }
@@ -1130,6 +1131,11 @@ form .icon {
     .vertical-slider {
         display: none;
     }
+}
+
+.card {
+    background-color: #f5b6bf;
+    border: none;
 }
 
 /* @media screen and (min-width: 813px) {
